--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
@@ -12,7 +13,8 @@
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
     "roboto-fontface": "*",
-    "vue": "^3.2.13",
+    "vue": "^3.3.4",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
