--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "env2": "^2.2.2",
     "express": "^4.18.2",
     "javascript-time-ago": "^2.5.9",
     "joi": "^17.9.2",
