--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "roboto-fontface": "*",
     "vue": "^3.3.4",
     "vue-cookies": "^1.8.3",
