--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "epic-spinners": "^2.0.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
